# interex

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yaml
frontend/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/wstest/: +page.svelte
nginx/: Dockerfile  default.conf
src/api/: app.py
src/domain/: exceptions.py  models.py
src/service_layer/: repository.py  services.py
src/services/: services.py
tests/: conftest.py
tests/domain/: test_order_book.py
tests/e2e/: test_api.py
tests/services/: test_repository.py  test_services.py
