[project]
name = "interex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sqlalchemy>=2.0.32", "httpx>=0.27.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ui", 'src/domain']

[tool.uv]
dev-dependencies = ["pytest>=8.3.2", "pre-commit>=3.8.0", "pyright>=1.1.378"]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
